web scrapping and rec sys started

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ amzon
 dask-worker-space
 Google_Api_Key.txt
 selenium_lecture_120720.ipynb
-
-
+selenium_lecture_120720.ipynb
+Dask-worker-space
+Grid Search
+dask.ipynb
